src/components/Header/Header.module.scss
@import '@/styles/variables.scss';
@import '@/styles/mixins.scss';

.header {
  position: fixed;
  top: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 100%;
  height: $header-height;
  padding: 7px 20px;
  box-sizing: border-box;
  background-color: fade-out($background-color, 0.1);

  & ~ div {
    margin-top: calc($header-height + 10px);
  }
}

.logo {
  & > img {
    max-height: 70px;
    align-items: center;
    justify-content: center;
  }
}

.err-btn {
  @include header-item;
  @include btn;

  &:hover {
    @include btn-hover;
  }
}

